[tool.poetry]
name = "S30"
version = "0.1.0"
description = "This Repository is to imporve my Data Structures and Algorithms skills and solve LeetCode Problems"
authors = ["Karthik Bhaskar <karthikrajabk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
